Fixed: Labels overflows for some languages (bug#12086).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Form.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Form.css
@@ -706,15 +706,16 @@ fieldset.TableLike.Narrow > .Row > label,
 fieldset.TableLike.Narrow > .Value,
 fieldset.TableLike.Narrow > .Row > .Value {
     line-height: 1.3em;
-    overflow-wrap: break-word;
+}
+
+fieldset.TableLike.Narrow > label,
+fieldset.TableLike.Narrow > .Row > label,
+fieldset.TableLike.Narrow > .Value,
+fieldset.TableLike.Narrow > .Row > .Value,
+fieldset.TableLike > label,
+fieldset.TableLike > .Row > label {
     word-wrap: break-word;
-    -ms-word-break: break-all;
-    word-break: break-all;
-    word-break: break-word;
-    -ms-hyphens: auto;
-    -moz-hyphens: auto;
-    -webkit-hyphens: auto;
-    hyphens: auto;
+    overflow-wrap: break-word;
 }
 
 iframe.Signature {
